--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,8 +4,11 @@
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
+@import './libs/_utilities';
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+
+
 
 /*
 	Twenty by HTML5 UP
