--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,7 +4,8 @@
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
-@import './libs/_utilities';
+@import './libs/utilities';
+@import './libs/component';
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
 
