oct/4/2019: programming approach && java io

--- a/assets/template/no-sidebar.html
+++ b/assets/template/no-sidebar.html
@@ -50,7 +50,7 @@
 
 					<header class="special container">
 						<span class="icon solid fa-sun"></span>
-						<h2>File Config <strong>文件配置</strong></h2>
+						<h2>No sidebar template <strong>无sidebar模版</strong></h2>
 						<p>“ Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
 					</header>
 
